Get route working on front end and able to display data on page. Yay that was fast!

--- a/public/gumdrop/src/app/contact/contact.component.html
+++ b/public/gumdrop/src/app/contact/contact.component.html
@@ -1,1 +1,7 @@
 <p>contact works!</p>
+<table>
+<tr *ngFor="let msg of contacts">
+    <td>{{msg.email}}</td>
+    <td>{{msg.message}}</td>
+</tr>
+</table>
