post route is working on front end

--- a/public/gumdrop/src/app/contact/contact.component.html
+++ b/public/gumdrop/src/app/contact/contact.component.html
@@ -5,3 +5,9 @@
     <td>{{msg.message}}</td>
 </tr>
 </table>
+<br>
+<form (ngSubmit)="onSubmit({email: email, message: message})">
+<input type="text" [(ngModel)] = "email" name="email" />
+<input type="text" [(ngModel)] = "message" name="message" />
+<button onclick="postMessage" type="submit">Submit</button>
+</form>
