--- a/public/gumdrop/src/app/menu-details/menu-details.component.html
+++ b/public/gumdrop/src/app/menu-details/menu-details.component.html
@@ -1,1 +1,7 @@
-<p>menu-details works!</p>
+<p>{{flavors[1].name}}</p>
+<img src='{{"../../../../assets/images/" +flavors[3].image+ ".jpg"}}'/>
+<table>
+    <tr>
+
+    </tr>
+    </table>
