--- a/public/gumdrop/src/styles.css
+++ b/public/gumdrop/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background-image: url('https://img.grouponcdn.com/seocms/k6BEiWj3QbazVWMAzo2CKUURQXD/frozen-yogurt-and-vanilla-wafers-gummy-bears-and-reeses-toppings_jpeg-600x390');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
