Lots of progress. Footer is up. nav and content container are now a reusable component. flavors are up and styled on the menu page

--- a/public/gumdrop/src/app/app.component.html
+++ b/public/gumdrop/src/app/app.component.html
@@ -1,1 +1,10 @@
 <router-outlet></router-outlet>
+<br>
+<footer class="footer">
+    <div class="container">
+        <span><strong>Powered By Angular</strong></span>
+        <br>
+        <br>
+        <span><strong>copyright 2020 </strong></span>
+    </div>
+</footer>
