--- a/public/gumdrop/src/app/menu/menu.component.html
+++ b/public/gumdrop/src/app/menu/menu.component.html
@@ -1,1 +1,12 @@
-<p>menu works!</p>
+    <nav>
+        <header id="header">GumDrop</header>
+    </nav>
+    <div id="container" class="row">
+        <ng-container class="" *ngTemplateOutlet="contentTemplate">
+        
+        </ng-container>
+    </div>
+
+
+    
+    
