--- a/public/gumdrop/src/app/home-page/home-page.component.css
+++ b/public/gumdrop/src/app/home-page/home-page.component.css
@@ -1,38 +1,7 @@
-nav{
-    background-image: url('https://snworksceo.imgix.net/dpn-34s/50ee3d80-035b-480d-983f-e1e0fad5e08a.sized-1000x1000.PNG?w=1000');
-    display: flex;
-    justify-content: center;
-    margin: 20px
-}
-#header{
-    font-size: 45pt;
-    text-shadow: 2px 2px 2px black;
-    color: white;
-    border-radius: 5px; 
-    width: 300px;
-    text-align: center;
-    background-color: rgb(255, 167, 211);
-    border: 3px dotted rgb(255, 23, 197);
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: rgba(255, 103, 129, 0.993);
-}
-
-#container{
-    background-image: url('https://snworksceo.imgix.net/dpn-34s/50ee3d80-035b-480d-983f-e1e0fad5e08a.sized-1000x1000.PNG?w=1000');
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 530px;
-    display: flex;
-    justify-content: center;
-    width: inherit;
-    margin: 20px;
-    margin-top: 20px;
-
-}
 
 .media{
     background-color: rgba(255, 217, 217, 0.856);
-    margin-top: 10px;
+    margin-top: 0;
     height: 150px;
     width: 750px;
 }
