--- a/public/gumdrop/src/app/home-page/home-page.component.html
+++ b/public/gumdrop/src/app/home-page/home-page.component.html
@@ -1,15 +1,13 @@
-<body id="body">
-<nav>
-    <header id="header">GumDrop</header>
-</nav>
-<div id="container">
-    <div class="media">
+<app-menu>
+  <ng-template #content>
+<div class="media">
         <div class="media-body">
           <h5 id="mediaTitle" class="mt-0">About GumDrop</h5>
           <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
         </div>
-      </div>
-
 </div>
-</body>
+</ng-template>
+</app-menu>
+
+
 
