power housed through most of the styling. Added alert message on contact page. making sure its responsive

--- a/public/gumdrop/src/app/app.component.css
+++ b/public/gumdrop/src/app/app.component.css
@@ -1,6 +1,7 @@
 .footer{
-    background-image: url('../assets/images/fruitsBackground.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-
+    background-color: rgba(219, 3, 86, 0.726);
+}
+.details{
+    font-family: "Belleza";
+    color: rgba(16, 111, 173);
 }
