--- a/public/gumdrop/src/app/app.component.html
+++ b/public/gumdrop/src/app/app.component.html
@@ -2,9 +2,10 @@
 <br>
 <footer class="footer">
     <div class="container">
-        <span><strong>Powered By Angular</strong></span>
+        <span class="details"><strong>1200 Ryder St. Austin, Tx</strong></span>
         <br>
+        <span class="details"><strong>512-265-6789</strong></span>
         <br>
-        <span><strong>copyright 2020 </strong></span>
+        <span class="details"><strong>Mon-Fri 9am-6pm</strong></span>
     </div>
 </footer>
