--- a/public/gumdrop/src/app/home-page/home-page.component.html
+++ b/public/gumdrop/src/app/home-page/home-page.component.html
@@ -2,9 +2,38 @@
   <ng-template #content>
 <div class="media">
         <div class="media-body">
-          <h5 id="mediaTitle" class="mt-0">About GumDrop</h5>
-          <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+          <strong><h4 id="mediaTitle" class="mt-0">About GumDrop</h4></strong>
+          <p>GumDrop is a frozen yogurt food truck located in Austin, TX. With a variety of flavors, toppings, and specials,
+            it's our goal to help locals beat the heat with a cool frozen treat!</p>
         </div>
+</div>
+<div class="row">
+<div class="media col m-4 flavors">
+  <div class="media-body">
+    <strong><h4 id="mediaTitle" class="mt-0">Flavors:</h4></strong>
+    <ul class="list">
+      <li>Banana</li>
+      <li>Bubble Gum</li>
+      <li>Cake Batter</li>
+      <li>Red Velvet</li>
+      <li>Pumpkin</li>
+      <li>Vanilla</li>
+    </ul>
+  </div>
+</div>
+<div class="media col m-4 flavors">
+  <div class="media-body">
+    <strong><h4 id="mediaTitle" class="mt-0">Toppings:</h4></strong>
+    <ul class="list">
+      <li>Oreos</li>
+      <li>Cake pieces</li>
+      <li>Bubble gum flavored candy</li>
+      <li>Hot fudge</li>
+      <li>Walnuts</li>
+      <li>Confetti sprinkles</li>
+    </ul>
+  </div>
+</div>
 </div>
 </ng-template>
 </app-menu>
