--- a/public/gumdrop/src/app/menu/menu.component.html
+++ b/public/gumdrop/src/app/menu/menu.component.html
@@ -1,6 +1,24 @@
-    <nav>
-        <header id="header">GumDrop</header>
-    </nav>
+<nav class="navbar row ">
+    <div class="navigation row">
+        <div class="col">
+          <div ngbDropdown class="d-inline-block">
+            <button class="btn" id="dropdownBasic1" ngbDropdownToggle>
+                <strong>Navigation</strong>
+            </button>
+            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+              <button ngbDropdownItem><a href="/">Home</a></button>
+              <button ngbDropdownItem><a href="/menu">Menu</a></button>
+              <button ngbDropdownItem><a href="/contact">Contact</a></button>
+            </div>
+          </div>
+        </div>
+    </div>
+    <div class="center col-12">
+        <div class="">
+        <header id="header">GumDrop</header> 
+        </div>
+    </div>
+</nav>
     <div id="container" class="row">
         <ng-container class="" *ngTemplateOutlet="contentTemplate">
         
