--- a/public/gumdrop/src/app/contact/contact.component.html
+++ b/public/gumdrop/src/app/contact/contact.component.html
@@ -3,7 +3,7 @@
         <div class="row container">
             <div class="row">
                 <div class="col">
-        <h3 class="heading">Questions? Suggestions? Send us a message and we'll get back to you!</h3>
+        <h3 class="heading">Questions? Suggestions? Send me a message and I'll get back to you!</h3>
                 </div>
             </div>
             <div *ngIf="hidden" class="row container alert">
