--- a/public/gumdrop/src/app/menu-details/menu-details.component.html
+++ b/public/gumdrop/src/app/menu-details/menu-details.component.html
@@ -1,5 +1,10 @@
 <app-menu>
 <ng-template #content>
+  <div class="row">
+    <div class="col">
+<h1 class="heading">Portfolio</h1>
+    </div>
+</div>
     <div class="row">
     <div class="card" style="width: 14rem;" *ngFor= "let flavor of flavors">
         <img class="card-img-top" style="height: 190px;" src='{{"../../../../assets/images/" +flavor.image+ ".jpg"}}' alt="Card image cap">
