--- a/public/gumdrop/src/app/menu/menu.component.css
+++ b/public/gumdrop/src/app/menu/menu.component.css
@@ -10,16 +10,17 @@ nav{
     border-radius: 5px; 
     width: fit-content;
     text-align: center;
-    background-color: rgba(16, 111, 173, 0.616);
-    /* background-image: url('../../assets/images/sprinklesBackground.jpg'); */
-    border: 4px dotted rgba(255, 103, 129);
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.425);
+    background-image: url('../../assets/images/cottonCandyBackground.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: 3px double rgba(255, 103, 129);
+    box-shadow: 1px 2px 1px 2px rgba(0, 0, 0, 0.425);
     -webkit-text-stroke-width: 1.5px;
     -webkit-text-stroke-color: rgba(255, 103, 129, 0.993);
 }
 
 #container{
-    background-image: url('../../assets/images/fruitsBackground.jpg');
+    background-image: url('../../assets/images/cottonCandyBackground.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     border: 1px solid rgba(0, 0, 0, 0.644);
@@ -38,6 +39,7 @@ nav{
 .btn{
     border: 1px solid  rgba(16, 111, 173, 0.616);
     color: white;
+    border-radius: 1pc;
 }
 
 .navigation{
