--- a/public/gumdrop/src/app/menu/menu.component.html
+++ b/public/gumdrop/src/app/menu/menu.component.html
@@ -3,11 +3,13 @@
         <div class="col">
           <div ngbDropdown class="d-inline-block">
             <button class="btn" id="dropdownBasic1" ngbDropdownToggle>
-                <strong>Navigation</strong>
+              <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-justify" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M2 12.5a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z"/>
+              </svg>
             </button>
             <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
               <button ngbDropdownItem><a href="/">Home</a></button>
-              <button ngbDropdownItem><a href="/menu">Menu</a></button>
+              <button ngbDropdownItem><a href="/menu">Portfolio</a></button>
               <button ngbDropdownItem><a href="/contact">Contact</a></button>
             </div>
           </div>
@@ -15,7 +17,7 @@
     </div>
     <div class="center col-12">
         <div class="">
-        <header id="header">GumDrop</header> 
+        <header id="header">Yasmin Yazdi</header> 
         </div>
     </div>
 </nav>
