--- a/public/gumdrop/src/app/menu/menu.component.html
+++ b/public/gumdrop/src/app/menu/menu.component.html
@@ -22,7 +22,7 @@
     </div>
 </nav>
     <div id="container" class="row">
-        <ng-container class="" *ngTemplateOutlet="contentTemplate">
+        <ng-container class="col" *ngTemplateOutlet="contentTemplate">
         
         </ng-container>
     </div>
