--- a/public/gumdrop/src/styles.css
+++ b/public/gumdrop/src/styles.css
@@ -5,3 +5,23 @@ body{
     background-size: cover;
 }
 
+#container::-webkit-scrollbar {
+    width: 15px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 20px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background:  rgba(219, 3, 86, 0.726);
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgba(189, 9, 78, 0.959)
+  }
