added social media icons and media queries

--- a/public/gumdrop/src/app/app.component.html
+++ b/public/gumdrop/src/app/app.component.html
@@ -2,10 +2,10 @@
 <br>
 <footer class="footer">
     <div class="container">
-        <span class="details"><strong>1200 Ryder St. Austin, Tx</strong></span>
+        <span class="details"><strong>Powered by Angular</strong></span>
         <br>
-        <span class="details"><strong>512-265-6789</strong></span>
+        <span class="details"><strong>518-605-2948</strong></span>
         <br>
-        <span class="details"><strong>Mon-Fri 9am-6pm</strong></span>
+        <span class="details"><strong>yyazdi13@gmail.com</strong></span>
     </div>
 </footer>
