--- a/public/gumdrop/src/app/contact/contact.component.html
+++ b/public/gumdrop/src/app/contact/contact.component.html
@@ -1,6 +1,14 @@
 <app-menu>
     <ng-template #content>
         <div class="row container">
+            <div class="row handles">
+                <div class="col">
+                    <h3 class="heading">Follow me on social media:</h3>
+                    <a target="blank" href="https://www.linkedin.com/in/yasmin-yazdi313/"><i class="fa fa-linkedin-square" style="font-size:48px;"></i></a>
+                    <a target="blank" href="https://github.com/yyazdi13"><i class="fa fa-github" style="font-size:48px;"></i></a>
+
+                </div>
+            </div>
             <div class="row">
                 <div class="col">
         <h3 class="heading">Questions? Suggestions? Send me a message and I'll get back to you!</h3>
