--- a/public/gumdrop/src/app/home-page/home-page.component.html
+++ b/public/gumdrop/src/app/home-page/home-page.component.html
@@ -11,40 +11,56 @@
 <div class="media about child" id="section1" #target>
         <div class="media-body">
           <strong><h4 id="mediaTitle" class="mt-0">About Me</h4></strong>
-          <p class="description"> I recently graduated with my Bachelor's from SUNY Albany, where I majored in psychology and minored in business.
-            I've volunteered in 3 different psychology research labs and that's where I first got 
-            exposed to a programming language (Python). I moved to Austin about a year ago to seek new opportunities and steady my 
-            career path. Sure enough, I came across The Coding Bootcamp at UT, where I've been pushing my capabilities and learning 
-            to code from a full stack prespective. Since starting, I've learned how to follow a MVC model, create a RESTful API, 
-            create an object oriented program, collaborate on GitHub, run browser tests, picked up many new languages and libraries 
-            such as React.js, and much more. I've become passionate about making creative web applications and solving complex problems with 
-            elegant yet easily maintainable code.</p>
+          <p class="description"> I graduated with my Bachelor's from SUNY Albany in 2017.
+            I then moved to Austin about 2 years ago to seek new opportunities and steady my 
+            career path. Sure enough, I came across The Coding Bootcamp at UT, where I learned
+            to code from a full stack prespective. Since starting, I've learned how to follow an MVC model, 
+            create a RESTful API, create an object oriented program, collaborate on GitHub, run browser and unit tests, 
+            picked up many new languages and libraries such as React.js, and much more. Since graduating the boot camp 
+            in April 2020, I've contributed to several open-source projects and started working at a freelance company, 
+            helping to develop cutom WordPress code. I'm passionate about making creative web applications and solving 
+            complex problems with elegant yet easily maintainable code.</p>
         </div>
 </div>
 <div class="row child" id="section2" #skills>
 <div class="media col m-4 flavors">
   <div class="media-body">
-    <strong><h4 id="mediaTitle" class="mt-0">Flavors:</h4></strong>
+    <strong><h4 id="mediaTitle" class="mt-0">Technical Skills:</h4></strong>
     <ul class="list">
-      <li>Banana</li>
-      <li>Bubble Gum</li>
-      <li>Cake Batter</li>
-      <li>Red Velvet</li>
-      <li>Pumpkin</li>
-      <li>Vanilla</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>React.js</li>
+      <li>SQL</li>
+      <li>MongoDB</li>
+      <li>TypeScript</li>
+      <li>Angular</li>
+      <li>Jest</li>
+      <li>REST API</li>
+      <li>OOP</li>
+      <li>Node.js</li>
+      <li>Postman</li>
+      <li>Bootstrap</li>
+      <li>Google Cloud</li>
     </ul>
   </div>
 </div>
 <div class="media col m-4 flavors">
   <div class="media-body">
-    <strong><h4 id="mediaTitle" class="mt-0">Toppings:</h4></strong>
+    <strong><h4 id="mediaTitle" class="mt-0">Soft Skills:</h4></strong>
     <ul class="list">
-      <li>Oreos</li>
-      <li>Cake pieces</li>
-      <li>Bubble gum flavored candy</li>
-      <li>Hot fudge</li>
-      <li>Walnuts</li>
-      <li>Confetti sprinkles</li>
+      <li>Team player</li>
+      <li>Communication</li>
+      <li>Time management</li>
+      <li>Orginization</li>
+      <li>Detail-oriented</li>
+      <li>Problem solver</li>
+      <li>Driven</li>
+      <li>Compassionate</li>
+      <li>Innovative</li>
+      <li>Tenacious</li>
+      <li>Multi-tasking</li>
+      <li>Quick learner</li>
     </ul>
   </div>
 </div>
