--- a/public/gumdrop/src/app/menu-details/menu-details.component.html
+++ b/public/gumdrop/src/app/menu-details/menu-details.component.html
@@ -6,7 +6,7 @@
     </div>
 </div>
     <div class="row">
-    <div class="card" style="width: 14rem;" *ngFor= "let flavor of flavors">
+    <div class="card child" style="width: 14rem;" *ngFor= "let flavor of flavors">
         <img class="card-img-top" style="height: 190px;" src='{{"../../../../assets/images/" +flavor.image+ ".jpg"}}' alt="Card image cap">
         <div class="card-body">
           <strong><h5 class="card-title">{{flavor.name}}</h5></strong>
