--- a/public/gumdrop/src/app/home-page/home-page.component.html
+++ b/public/gumdrop/src/app/home-page/home-page.component.html
@@ -6,11 +6,13 @@
       <button class="btn btn-danger" (click)="scrollToElement(skills)">Skills</button>
     </div>
         <div class="image">
-          <img class="" src="../../assets/images/IMG_E1304.JPG">
+          <img class="" src="../../assets/images/IMG_E1304.JPG" alt="code">
         </div>
 <div class="media about child" id="section1" #target>
         <div class="media-body">
           <strong><h4 id="mediaTitle" class="mt-0">About Me</h4></strong>
+          <img src="../../assets/images/me.jpg" alt="me" class="me"/>
+          <hr>
           <p class="description"> I graduated with my Bachelor's from SUNY Albany in 2017.
             I then moved to Austin about 2 years ago to seek new opportunities and steady my 
             career path. Sure enough, I came across The Coding Bootcamp at UT, where I learned
@@ -18,7 +20,7 @@
             create a RESTful API, create an object oriented program, collaborate on GitHub, run browser and unit tests, 
             picked up many new languages and libraries such as React.js, and much more. Since graduating the boot camp 
             in April 2020, I've contributed to several open-source projects and started working at a freelance company, 
-            helping to develop cutom WordPress code. I'm passionate about making creative web applications and solving 
+            helping to develop custom WordPress code. I'm passionate about making creative web applications and solving 
             complex problems with elegant yet easily maintainable code.</p>
         </div>
 </div>
