--- a/public/gumdrop/src/app/menu-details/menu-details.component.css
+++ b/public/gumdrop/src/app/menu-details/menu-details.component.css
@@ -36,5 +36,7 @@
     .card{
         margin-top: 100px;
         margin-bottom: 100px;
+        margin-left: 100px;
+        margin-right: 0;
     }
 }
