--- a/public/gumdrop/src/app/menu/menu.component.html
+++ b/public/gumdrop/src/app/menu/menu.component.html
@@ -15,6 +15,8 @@
           </div>
         </div>
     </div>
+    <img src="https://media.giphy.com/media/PiQejEf31116URju4V/giphy.gif" alt="typing gif" style="height: 80px; margin-bottom: 5px;" class="gif"/>
+
     <div class="center col-12">
         <div class="">
         <header id="header">Yasmin Yazdi</header> 
