--- a/public/gumdrop/src/app/menu-details/menu-details.component.html
+++ b/public/gumdrop/src/app/menu-details/menu-details.component.html
@@ -5,7 +5,7 @@
 <h1 class="heading">Portfolio</h1>
     </div>
 </div>
-    <div class="row">
+    <div class="row card-wrapper">
     <div class="card child" style="width: 14rem;" *ngFor= "let flavor of flavors">
         <img class="card-img-top" style="height: 190px;" src='{{"../../../../assets/images/" +flavor.image+ ".jpg"}}' alt="Card image cap">
         <div class="row">
