--- a/public/gumdrop/src/app/home-page/home-page.component.html
+++ b/public/gumdrop/src/app/home-page/home-page.component.html
@@ -43,6 +43,8 @@
       <li>Node.js</li>
       <li>Postman</li>
       <li>Bootstrap</li>
+      <li>PHP</li>
+      <li>WordPress</li>
     </ul>
   </div>
 </div>
