--- a/public/gumdrop/src/app/menu-details/menu-details.component.css
+++ b/public/gumdrop/src/app/menu-details/menu-details.component.css
@@ -31,12 +31,32 @@
     scroll-snap-align: start;
 }
 
+@media only screen and (max-width: 768px) {
+    .card-wrapper{
+        display: flex;
+        justify-content: space-evenly;
+        align-self: center;
+        justify-self: center;
+        flex-wrap: wrap;
+     }
+    .card{
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
+
 @media only screen and (max-width: 600px) {
     
+    .card-wrapper{
+       display: flex;
+       justify-content: center;
+       align-self: center;
+       justify-self: center;
+       flex-wrap: wrap;
+    }
+
     .card{
-        margin-top: 100px;
-        margin-bottom: 100px;
-        margin-left: 100px;
+        margin-left: 0;
         margin-right: 0;
     }
 }
